--- a/source/less/blocks/booking-search.less
+++ b/source/less/blocks/booking-search.less
@@ -3,13 +3,13 @@
 }
 
 .booking-search__header {
-  margin: 0px;
+  margin: 0;
   font-size: 21px;
   line-height: 26px;
 }
 
 .booking-search__action {
-  margin: 20px 0px;
+  margin: 20px 0;
   font-size: 14px;
   line-height: 24px;
   color: @color-dark-charcoal;
