--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -4,9 +4,9 @@
 
 .features__list {
   list-style: none;
-  margin: 0px;
-  padding: 0px;
-  }
+  margin: 0;
+  padding: 0;
+}
 
 .features__item {
   text-align: left;
@@ -16,11 +16,11 @@
   &--living .features__header::before {
     position: absolute;
     top: -10px;
-    left: 0px;
+    left: 0;
     content: "";
     width: 39px;
     height: 37px;
-    background-image: url(../../img/icons/icon-house.svg);
+    background-image: url("../../img/icons/icon-house.svg");
   }
 
   &--present .features__header::before {
@@ -30,7 +30,7 @@
     content: "";
     width: 32px;
     height: 38px;
-    background-image: url(../../img/icons/icon-gift.svg);
+    background-image: url("../../img/icons/icon-gift.svg");
   }
 
   &--meal .features__header::before {
@@ -40,19 +40,19 @@
     content: "";
     width: 40px;
     height: 35px;
-    background-image: url(../../img/icons/icon-burger.svg);
+    background-image: url("../../img/icons/icon-burger.svg");
   }
 }
 
 .features__header {
   font-size: 18px;
   font-weight: 700;
-  margin: 0px;
+  margin: 0;
   padding-bottom: 15px;
 }
 
 .features__desc {
-  margin: 0px;
+  margin: 0;
   padding-bottom: 10px;
   color: @color-dark-charcoal;
   font-size: 14px;
