--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,17 +1,17 @@
 .advantages__title {
-  margin: 0px;
+  margin: 0;
   padding: 32px 25px 27px;
 }
 
 .advantages__list {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
 .advantages__item {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 
   &:nth-last-child(-n+3) {
     background-color: @color-bright-gray;
@@ -25,7 +25,7 @@
 }
 
 .advantages__header {
-  margin: 0px;
+  margin: 0;
   font-size: 18px;
   font-weight: 700;
 }
@@ -47,7 +47,7 @@
 .advantages__slogan {
   font-size: inherit;
   line-height: 21px;
-  margin: 0px;
+  margin: 0;
 }
 
 .advantages__photo {
