--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -1,6 +1,6 @@
 .container {
-  margin: 0px auto;
-  padding: 0px;
+  margin: 0 auto;
+  padding: 0;
   max-width: 320px;
   background-color: @color-white;
 }
