--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -1,7 +1,7 @@
 
 .navigation {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   color: @color-white;
 }
 
@@ -10,20 +10,20 @@
 }
 
 .navigation__list {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   list-style: none;
   display: none;
 }
 
 .navigation__item {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   min-height: 55px;
   background-color: @color-dark-sky-blue;
   box-shadow:
-    0px 1px 0px @color-black-shadow,
-    inset 0px 1px 0px rgba(255, 255, 255, 0.2);
+    0 1px 0 @color-black-shadow,
+    inset 0 1px 0 rgba(255, 255, 255, 0.2);
   font-weight: 700;
   line-height: 40px;
   text-align: center;
