--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -2,8 +2,8 @@ body {
   font-family: @font-family;
   min-width: 320px;
   min-height: 100%;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   font-size: 14px;
   line-height: 26px;
   font-weight: 400;
