--- a/source/less/blocks/socials.less
+++ b/source/less/blocks/socials.less
@@ -1,7 +1,7 @@
 .socials__list {
   list-style: none;
-  margin: 0px auto;
-  padding: 0px;
+  margin: 0 auto;
+  padding: 0;
   display: flex;
   width: 155px;
   justify-content: space-between;
