--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,7 @@
-*, *::before, *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 .visually-hidden {
@@ -24,4 +25,3 @@
 @import "blocks/booking-search.less";
 @import "blocks/page-footer.less";
 @import "blocks/socials.less";
-
