--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -20,7 +20,7 @@
     content: "";
     width: 39px;
     height: 37px;
-    background-image: url("../../img/icons/icon-house.svg");
+    background-image: url("../img/icons/icon-house.svg");
   }
 
   &--present .features__header::before {
@@ -30,7 +30,7 @@
     content: "";
     width: 32px;
     height: 38px;
-    background-image: url("../../img/icons/icon-gift.svg");
+    background-image: url("../img/icons/icon-gift.svg");
   }
 
   &--meal .features__header::before {
@@ -40,7 +40,7 @@
     content: "";
     width: 40px;
     height: 35px;
-    background-image: url("../../img/icons/icon-burger.svg");
+    background-image: url("../img/icons/icon-burger.svg");
   }
 }
 
