--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,6 +1,6 @@
 .intro {
   background-color: @color-cyan-azure;
-  background-image: url("../../img/intro-background-small.jpg");
+  background-image: url("../img/intro-background-small.jpg");
   background-position: 50% 50%;
   background-repeat: no-repeat;
   min-height: 389px;
