--- a/source/less/blocks/map-review.less
+++ b/source/less/blocks/map-review.less
@@ -1,5 +1,5 @@
 .map-review {
-  background-image: url("../../img/map-small.jpg");
+  background-image: url("../img/map-small.jpg");
 }
 
 .map-review__iframe {
