--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -1,4 +1,4 @@
-body {
+.page-body {
   font-family: @font-family;
   min-width: 320px;
   min-height: 100%;
@@ -10,5 +10,5 @@ body {
   text-align: center;
   color: @color-black;
   text-transform: uppercase;
-  background-color: @color-platinum;
+  background-color: @color-white;
 }
