--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,19 +1,7 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-.visually-hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-}
-
+@import "global/global.less";
 @import "global/fonts.less";
 @import "global/variables.less";
+@import "global/page.less";
 @import "blocks/page-body.less";
 @import "blocks/container.less";
 @import "blocks/page-header.less";
