Выполнил стилизацию формы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,3 +13,12 @@
 @import "blocks/booking-search.less";
 @import "blocks/page-footer.less";
 @import "blocks/socials.less";
+@import "blocks/page-form.less";
+@import "blocks/feedback-form.less";
+@import "blocks/fieldset-identity.less";
+@import "blocks/fieldset-contacts.less";
+@import "blocks/fieldset-impression.less";
+@import "blocks/fieldset-observed.less";
+@import "blocks/fieldset-emotions.less";
+@import "blocks/modal-success.less";
+@import "blocks/modal-failure.less";
