--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -23,10 +23,13 @@
   background-color: @color-dark-sky-blue;
   box-shadow:
     0 1px 0 @color-black-shadow,
-    inset 0 1px 0 rgba(255, 255, 255, 0.2);
+    inset 0 1px 0 @color-white-shadow;
+  font-size: 18px;
   font-weight: 700;
   line-height: 40px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .navigation__link {
