--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,6 +1,7 @@
 /* Color variables */
 @color-white: #ffffff;
 @color-white-opacity: rgba(255, 255, 255, 0.3);
+@color-white-shadow: rgba(255, 255, 255, 0.2);
 @color-black: #000000;
 @color-black-opacity: rgba(0, 0, 0, 0.3);
 @color-dark-sky-blue: #81b3d2;
@@ -8,10 +9,14 @@
 @color-dark-charcoal: #333333;
 @color-bright-gray: #eeeeee;
 @color-black-shadow: rgba(1, 1, 1, 0.2);
+@color-drop-shadow:  rgba(0, 1, 1, 0.15);
 @color-platinum: #E7E5E5;
 @color-light-silver: #D6D6D6;
 @color-cerulean-frost: #669EC0;
 @color-silver-lake-blue: #5496BD;
 @color-platinum-vip: #E5E5E5;
+@color-anti-flash-white: #F2F2F2;
+@color-platinum-sedona: #E6E6E6;
+
 /* Fonts */
 @font-family: PT Sans, Arial, sans-serif;
