--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -4,9 +4,11 @@
 @color-white-shadow: rgba(255, 255, 255, 0.2);
 @color-black: #000000;
 @color-black-opacity: rgba(0, 0, 0, 0.3);
+@color-black-opacity-low: rgba(0, 0, 0, 0.6);
 @color-dark-sky-blue: #81b3d2;
 @color-cyan-azure: #4B81AD;
 @color-dark-charcoal: #333333;
+@color-dark-charcoal-opacity: rgba(51, 51, 51, 0.3);
 @color-bright-gray: #eeeeee;
 @color-black-shadow: rgba(1, 1, 1, 0.2);
 @color-drop-shadow:  rgba(0, 1, 1, 0.15);
