--- a/source/less/style.less
+++ b/source/less/style.less
@@ -22,3 +22,8 @@
 @import "blocks/fieldset-emotions.less";
 @import "blocks/modal-success.less";
 @import "blocks/modal-failure.less";
+@import "blocks/page-catalog.less";
+@import "blocks/photo-catalog.less";
+@import "blocks/image-container.less";
+@import "blocks/video-box.less";
+@import "blocks/controls-set.less";
