--- a/source/less/blocks/feedback-form.less
+++ b/source/less/blocks/feedback-form.less
@@ -18,6 +18,7 @@
     font-family: inherit;
     font-size: 18px;
     line-height: inherit;
+    font-weight: 700;
     color: @color-black;
     padding: 10px;
     background-color: @color-anti-flash-white;
