--- a/source/less/blocks/fieldset-emotions.less
+++ b/source/less/blocks/fieldset-emotions.less
@@ -2,6 +2,11 @@
   width: 280px;
   height: 160px;
   padding: 13px 22px 29px;
+  color: @color-black;
+  font-family: @font-family;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
 
   &::placeholder {
     color: @color-black;
