--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -22,6 +22,15 @@
 .page-footer__link {
   color: @color-black;
   text-decoration: none;
+
+  &:hover path,
+  &:focus path {
+    fill: @color-dark-sky-blue;
+  }
+
+  &:active path {
+    fill: @color-dark-charcoal-opacity;
+  }
 }
 
 .page-footer__desc {
