--- a/source/less/blocks/booking-search.less
+++ b/source/less/blocks/booking-search.less
@@ -27,3 +27,24 @@
   background-color: @color-dark-sky-blue;
   border: none;
 }
+
+@media (min-width: @tablet-width) {
+  .booking-search {
+    padding: 57px 155px;
+    background-color: @color-white;
+  }
+
+  .booking-search__header {
+    font-size: 30px;
+  }
+
+  .booking-search__button {
+    width: 458px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .booking-search__action {
+    padding: 0 200px;
+  }
+}
