--- a/source/less/blocks/map-review.less
+++ b/source/less/blocks/map-review.less
@@ -6,3 +6,19 @@
   border: none;
   display: block;
 }
+
+@media (min-width: @tablet-width) {
+  .map-review {
+    background-image: url("../img/map-middle.jpg");
+  }
+
+  .map-review__iframe {
+    width: 100%;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .map-review {
+    background-image: url("../img/map-big.jpg");
+  }
+}
