--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -36,3 +36,15 @@
 .page-footer__desc {
   padding-right: 10px;
 }
+
+@media (min-width: @tablet-width) {
+  .page-footer {
+    background-color: @color-white;
+  }
+
+  .page-footer__wrapper {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+  }
+}
