--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,8 +1,29 @@
 .page-header {
   min-height: 56px;
   margin-bottom: -28px;
+  position: relative;
 }
 
 .page-header__logo-image {
   max-width: 100%;
+}
+
+@media (min-width: @tablet-width) {
+  .page-header {
+    margin-bottom: 0;
+  }
+
+  .page-header__logo {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%);
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-header__logo-image {
+    width: 187px;
+    height: 97px;
+  }
 }
