--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -12,6 +12,7 @@
 @color-bright-gray: #eeeeee;
 @color-black-shadow: rgba(1, 1, 1, 0.2);
 @color-drop-shadow:  rgba(0, 1, 1, 0.15);
+@color-drop-shadow-low: rgba(0, 1, 1, 0.2);
 @color-platinum: #E7E5E5;
 @color-light-silver: #D6D6D6;
 @color-cerulean-frost: #669EC0;
@@ -19,6 +20,13 @@
 @color-platinum-vip: #E5E5E5;
 @color-anti-flash-white: #F2F2F2;
 @color-platinum-sedona: #E6E6E6;
+@color-silver-sand: #C4C4C4;
 
 /* Fonts */
 @font-family: PT Sans, Arial, sans-serif;
+
+// Viewports
+
+@tablet-width: 768px;
+@desktop-width: 1200px;
+@mobile-width-only: 767px;
