--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,6 +11,7 @@
 @import "blocks/section-title.less";
 @import "blocks/features.less";
 @import "blocks/booking-search.less";
+@import "blocks/map-review.less";
 @import "blocks/page-footer.less";
 @import "blocks/socials.less";
 @import "blocks/page-form.less";
