--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -3,3 +3,16 @@
   padding: 0;
   max-width: 320px;
 }
+
+@media (min-width: @tablet-width) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .container {
+    max-width: 1200px;
+    box-shadow: 0 5px 15px @color-drop-shadow-low;
+  }
+}
