--- a/source/less/blocks/section-title.less
+++ b/source/less/blocks/section-title.less
@@ -13,3 +13,14 @@
   padding-top: 20px;
   margin-bottom: 0;
 }
+
+@media (min-width: @tablet-width) {
+  .section-title__header {
+    font-size: 30px;
+  }
+
+  .section-title__content {
+    font-size: 14px;
+    line-height: 24px;
+  }
+}
