--- a/source/less/blocks/fieldset-identity.less
+++ b/source/less/blocks/fieldset-identity.less
@@ -3,3 +3,15 @@
   padding: 0;
   margin-bottom: 20px;
 }
+
+@media (min-width: @tablet-width) {
+  .fieldset-identity {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .fieldset-identity__input {
+    width: 240px;
+  }
+}
