--- a/source/less/blocks/fieldset-observed.less
+++ b/source/less/blocks/fieldset-observed.less
@@ -16,3 +16,19 @@
     text-transform: initial;
   }
 }
+
+@media (min-width: @tablet-width) {
+  .fieldset-observed__block {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 0;
+    padding: 0 100px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .fieldset-observed__block {
+    grid-template-columns: repeat(4, 1fr);
+    padding: 0;
+  }
+}
