--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -4,3 +4,22 @@
   background-repeat: no-repeat;
   min-height: 214px;
 }
+
+@media (min-width: @tablet-width) {
+  .page-form .intro {
+    background-image: url("../img/background-middle.jpg");
+    min-height: 346px;
+  }
+
+  .page-form .intro__logo {
+    width: 457px;
+    height: 78px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-form .intro {
+    background-image: url("../img/background-big.jpg");
+    min-height: 357px;
+  }
+}
