--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -21,6 +21,7 @@
 @color-anti-flash-white: #F2F2F2;
 @color-platinum-sedona: #E6E6E6;
 @color-silver-sand: #C4C4C4;
+@color-transparent: transparent;
 
 /* Fonts */
 @font-family: PT Sans, Arial, sans-serif;
