--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -72,31 +72,34 @@
     &--living .features__header::before {
       position: absolute;
       top: 10px;
-      left: 50%;
+      left: 35%;
       content: "";
-      width: 37px;
-      height: 39px;
+      width: 75px;
+      height: 72px;
       background-image: url("../img/icons/icon-house.svg");
+      background-size: cover;
     }
 
     &--present .features__header::before {
       position: absolute;
       top: 10px;
-      left: 50%;
+      left: 35%;
       content: "";
-      width: 32px;
-      height: 38px;
+      width: 64px;
+      height: 75px;
       background-image: url("../img/icons/icon-gift.svg");
+      background-size: cover;
     }
 
     &--meal .features__header::before {
       position: absolute;
       top: 10px;
-      left: 50%;
+      left: 35%;
       content: "";
-      width: 40px;
-      height: 35px;
+      width: 76px;
+      height: 68px;
       background-image: url("../img/icons/icon-burger.svg");
+      background-size: cover;
     }
 
     &:nth-child(2) {
@@ -127,5 +130,22 @@
     font-size: 14px;
     line-height: 21px;
     padding: 20px;
+  }
+
+  .features__item {
+    &--living .features__header::before {
+      top: 10px;
+      left: 40%;
+    }
+
+    &--present .features__header::before {
+      top: 10px;
+      left: 42%;
+    }
+
+    &--meal .features__header::before {
+      top: 10px;
+      left: 40%;
+    }
   }
 }
