--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -3,6 +3,8 @@
 @color-white-opacity: rgba(255, 255, 255, 0.3);
 @color-white-shadow: rgba(255, 255, 255, 0.2);
 @color-black: #000000;
+@color-black-opacity-bulk: rgba(0, 0, 0, 0);
+@color-black-opacity-shadow: rgba(0, 0, 0, 0.2);
 @color-black-opacity: rgba(0, 0, 0, 0.3);
 @color-black-opacity-low: rgba(0, 0, 0, 0.6);
 @color-dark-sky-blue: #81b3d2;
