--- a/source/less/blocks/map-review.less
+++ b/source/less/blocks/map-review.less
@@ -1,5 +1,31 @@
 .map-review {
   background-image: url("../img/map-small.jpg");
+  position: relative;
+
+  &::before {
+    content: "";
+    width: 27px;
+    height: 27px;
+    border-radius: 50%;
+    background-color: @color-white;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    position: absolute;
+  }
+
+  &::after {
+    content: "";
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+    background-color: @color-dark-sky-blue-light;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+    position: absolute;
+    transform: translate(30%, 30%);
+  }
 }
 
 .map-review__iframe {
