--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -15,7 +15,7 @@
     height: 57px;
     background-image: url("../img/intro-shape-small.svg");
     position: absolute;
-    bottom: 0;
+    bottom: -1px;
   }
 }
 
