--- a/source/less/blocks/fieldset-observed.less
+++ b/source/less/blocks/fieldset-observed.less
@@ -1,11 +1,11 @@
 .fieldset-observed__block {
   list-style: none;
-  margin: 0 0 0 100px;
+  margin: 0;
   padding: 0;
 }
 
 .fieldset-observed__item {
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   text-align: left;
 
   label {
@@ -15,6 +15,60 @@
     line-height: 26px;
     text-transform: initial;
   }
+}
+
+.fieldset-observed__checkbox + label,
+.fieldset-observed__checkbox:checked + label {
+  position: relative;
+  padding-left: 76px;
+  cursor: pointer;
+}
+
+/* checkbox */
+.fieldset-observed__checkbox + label::before,
+.fieldset-observed__checkbox:checked + label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -10px;
+  width: 46px;
+  height: 46px;
+  background-color: @color-anti-flash-white;
+  border: 5px solid @color-anti-flash-white;
+  border-radius: 10%;
+}
+
+/* checked checkbox */
+.fieldset-observed__checkbox + label::after,
+.fieldset-observed__checkbox:checked + label::after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 10px;
+  top: 4px;
+  left: 13px;
+  background-color: @color-transparent;
+  border-bottom: 3px solid @color-black;
+  border-left: 3px solid @color-black;
+  border-radius: 10%;
+  transition: all 0.2s;
+}
+
+/* checked checkbox toggle */
+.fieldset-observed__checkbox + label::after {
+  opacity: 0;
+  transform: scale(0) rotate(0);
+}
+
+.fieldset-observed__checkbox:checked + label::after {
+  opacity: 1;
+  transform: scale(1) rotate(-45deg);
+}
+
+/* checkbox accessibility */
+.fieldset-observed__checkbox:focus + label::before,
+.fieldset-observed__checkbox:checked:focus + label::before {
+  box-shadow: inset 0 0 0 6px @color-white-shadow, 0 1px 3px @color-black-opacity-shadow;
 }
 
 @media (min-width: @tablet-width) {
