--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -27,6 +27,8 @@
 @color-transparent: transparent;
 @color-deep-taupe: #766357;
 @color-umber: #604E43;
+@color-gainsboro: #dbdbdb;
+@color-light-gray: #D5D5D5;
 
 /* Fonts */
 @font-family: PT Sans, Arial, sans-serif;
