Внес исправления, добавил фавиконки и лого в svg

--- a/source/less/blocks/controls-set.less
+++ b/source/less/blocks/controls-set.less
@@ -61,11 +61,11 @@
 
     &:hover path,
     &:focus path {
-      opacity: 0.6;
+      fill: @color-white-opacity-low;
     }
 
     &:active path {
-      opacity: 0.3;
+      fill: @color-white-opacity;
     }
   }
 
@@ -92,6 +92,7 @@
 
     & svg:first-of-type {
       position: absolute;
+      left: 30%;
     }
   }
 
