--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,6 +1,7 @@
 /* Color variables */
 @color-white: #ffffff;
 @color-white-opacity: rgba(255, 255, 255, 0.3);
+@color-white-opacity-low: rgba(255, 255, 255, 0.6);
 @color-white-shadow: rgba(255, 255, 255, 0.2);
 @color-black: #000000;
 @color-black-opacity-bulk: rgba(0, 0, 0, 0);
