--- a/source/less/blocks/fieldset-impression.less
+++ b/source/less/blocks/fieldset-impression.less
@@ -20,7 +20,8 @@
     cursor: pointer;
   }
 
-  & + label::before {
+  & + label::before,
+  &:checked + label::before {
     content: "";
     position: absolute;
     width: 48px;
@@ -43,8 +44,8 @@
     border-color: @color-light-gray;
   }
 
-  &:checked {
-    & + label::after {
+    & + label::after,
+    &:checked + label::after {
       content: "";
       position: absolute;
       width: 18px;
@@ -54,8 +55,9 @@
       background-color: @color-dark-charcoal;
       top: 4px;
       left: -59px;
+      transition: all 0.2s;
     }
-
+  &:checked {
     &:hover + label::before,
     &:focus + label::before {
       background-color: @color-platinum-vip;
@@ -71,6 +73,24 @@
       }
     }
   }
+}
+
+/* toggle radio */
+.fieldset-impression__radio + label::after {
+  opacity: 0;
+  transform: scale(0);
+}
+
+.fieldset-impression__radio:checked + label::after {
+  opacity: 1;
+  transform: scale(1);
+}
+
+/* radio accessibility */
+.fieldset-impression__radio:focus + label::before,
+.fieldset-impression__radio:checked:focus + label::before {
+  box-shadow: inset 0 0 0 6px @color-white-shadow, 0 1px 3px @color-black-opacity-shadow;
+  background-color: @color-platinum-vip;
 }
 
 @media (min-width: @tablet-width) {
