Установил адаптивную графику для всех трех страниц

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -63,7 +63,7 @@
 
 .advantages__photo {
   display: block;
-  max-width: fit-content;
+  // max-width: fit-content;
 }
 
 @media (min-width: @tablet-width) {
@@ -78,7 +78,7 @@
   }
 
   .advantages__photo {
-    width: 512px;
+    min-width: 512px;
     height: 256px;
     display: block;
   }
@@ -107,8 +107,7 @@
 
 @media (min-width: @desktop-width) {
   .advantages__photo {
-    width: 800px;
+    min-width: 800px;
     height: 256px;
-    min-width: 100%;
   }
 }
