--- a/source/less/blocks/feedback-form.less
+++ b/source/less/blocks/feedback-form.less
@@ -84,6 +84,10 @@
     padding: 64px 165px;
     border-bottom: none;
     margin: 0;
+
+    .section-title__header {
+      font-size: 30px;
+    }
   }
 
   .feedback-form__info {
