--- a/source/less/blocks/modal-failure.less
+++ b/source/less/blocks/modal-failure.less
@@ -26,3 +26,11 @@
   background-color: @color-dark-sky-blue;
   border: none;
 }
+
+@media (min-width: @tablet-width) {
+  .modal-failure__header {
+    .section-title__header {
+      font-size: 30px;
+    }
+  }
+}
