--- a/source/less/blocks/modal-success.less
+++ b/source/less/blocks/modal-success.less
@@ -27,3 +27,11 @@
   background-color: @color-dark-sky-blue;
   border: none;
 }
+
+@media (min-width: @tablet-width) {
+  .modal-success__header {
+    .section-title__header {
+      font-size: 30px;
+    }
+  }
+}
