--- a/source/less/blocks/photo-catalog.less
+++ b/source/less/blocks/photo-catalog.less
@@ -25,6 +25,10 @@
     border-bottom: none;
     grid-column-start: 1;
     grid-column-end: -1;
+
+    .section-title__header {
+      font-size: 30px;
+    }
   }
 
   .photo-catalog__item {
