--- a/source/less/blocks/video-box.less
+++ b/source/less/blocks/video-box.less
@@ -28,6 +28,10 @@
 
   .video-box__header {
     padding: 55px 100px 65px;
+
+    .section-title__header {
+      font-size: 30px;
+    }
   }
 
   .video-box__video {
